[metadata]
name = bedclock
version = 0.0.1
summary = MQTT based contoller for 64x64 RGB led matrix and motion sensor
author = Flavio Fernandes
home-page = https://flaviof.com
classifier =
    Environment :: bedclock
    Intended Audience :: DIY enthusiasts
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    bedclock

[wheel]
universal = 1
